--- a/css/styles.css
+++ b/css/styles.css
@@ -1,55 +1,72 @@
 body {
     background-image: url(../img/app_background.png);
+    background-repeat: no-repeat;
     background-size: 100%;
     width: 100%;
     height: 100%;
     margin: 0px;
     max-width: 100%;
-    font-family: Arial, sans-serif;
 }
 
 #text {
-    margin-bottom: 10px;
-    padding: 10px;
+    margin-bottom: 15px;
+    padding: 5px;
     background-color: #2D4A57;
     color: white;
-}
-
-h1,
-h3 {
-    padding-left: 260px;
+    text-align: center;
+    font-family: Garamond;
 }
 
 h1 {
-    text 
+    font-size: xx-large;
+
+}
+
+h3 {
+    font-size: large;
 }
 
 #logo {
     float: left;
-    padding-top: 15px;
-    padding-left: 100px;
+    padding-top: 17px;
+    padding-left: 70px;
+    position: absolute;
 }
 
 form {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
     align-items: center;
     margin-bottom: 20px;
+    margin-top: 20px;
+    font-family: "Trebuchet MS";
+    font-weight: bold;
+    margin-left: 17px;
+}
+
+legend {
+    background-color: #EFCAA8;
+    font-family: Garamond;
+    font-size: x-large;
+}
+
+fieldset {
+    background-color: #EFCAA8;
 }
 
 label {
-    display: block;
     margin-right: 10px;
     margin-bottom: 10px;
-    font-weight: bold;
-    text-align: right;
-    width: 130px;
+}
+
+input {
+    font-family: "Trebuchet MS";
 }
 
 input[type="text"],
 input[type="date"],
-button[type="submit"] {
+input[type="email"],
+input[type="submit"],
+input[type="reset"] {
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
@@ -58,18 +75,29 @@ button[type="submit"] {
 }
 
 input[type="text"],
-input[type="date"] {
+input[type="date"],
+input[type="email"] {
     width: 200px;
 }
 
-button[type="submit"] {
+input[type="submit"] {
     background-color: #007bff;
     color: white;
     cursor: pointer;
 }
 
-button[type="submit"]:hover {
+input[type="submit"]:hover {
     background-color: #0062cc;
+}
+
+input[type="reset"] {
+    background-color: #e43434;
+    color: white;
+    cursor: pointer;
+}
+
+input[type="reset"]:hover {
+    background-color: #f8633a;
 }
 
 #results {
